Add generic reproducible study framework